@@ -25,6 +25,9 @@ Changed
  - Improved how parsers and writers are selected by file extension
  - Improved content negotiation logic to properly support quality factors and type ranges
 
+- Query
+ - Improved how Distinct() algebra behaves with respect to trimming temporary variables to better support complex property paths
+
 Removed
 - Marks the obsolete JosekiConnector as obsolete unusable
 - Removed the obsolete TalisPlatformConnector
